Device limits/features refactor
Separated supported and required device features
Removed from DeviceLimits
Limits no longer lazily evaluated, now ctor argument
Refactored usage cases for device limits accordingly
Moved physical device memory properties to accessor
Removed allocator from logical device